-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.1
-
None
-
Ubuntu 24.04 LTS
Wayland
-
2f221dbb3 (dev), fce60e914 (6.10), adea892e6 (6.9)
- Open the attached project in Creator.
I configured it on Qt 6.9.1 from the Online Installer - Go to the line
p.drawTand trigger code completion.
- Press Enter to complete the line using drawText(),
Creator crashes. On the command line I can read:Failed to initialize instances shared memory: "QSharedMemory::handle: doesn't exist" QObject::disconnect: wildcard call disconnects from destroyed signal of ProjectExplorer::TargetSetupPage::TargetSetupPage SOFT ASSERT [16:50:12.615]: "!clangToolPath.isEmpty()" in /home/qtrob/dev/src/creator-17/src/plugins/clangtools/executableinfo.cpp:219 qt.qpa.wayland: Failed to create popup. Ensure popup QWidgetWindow(0x5a73b5ce4070, name="QWidgetClassWindow") has a transientParent set. The Wayland connection experienced a fatal error: Protokollfehler
- is duplicated by
-
QTCREATORBUG-33097 Qt Creator 17 crashes on Fedora 42
-
- Closed
-
-
QTCREATORBUG-33151 Many crashes on autocomplete with wayland: qt.qpa.wayland: Failed to create popup.
-
- Closed
-
- relates to
-
QTBUG-136110 [Reg 6.8->6.9] Crash when opening popup (when creating new C++ class) (Wayland protocol error)
-
- Closed
-